
[package]
name = "gear-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
zip = "0.6.2"
chrono-tz = "0.8.1"
chrono = "0.4.23"
tokio = { version = "1", features = ["full"] }
error-chain = "0.12.4"
clap = { version = "4.0.32", features = ["derive"] }